<resources>
    <string name="app_name">My Salonss Partner</string>
    <string name="login"><u>I already have an account , login</u></string>
    <string name="register_text"><u>Register</u></string>
    <string name="login_text"><u>Login</u></string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="gender">Gender</string>
    <string name="aadhar_number">Aadhaar Number</string>
    <string name="group">Group</string>
    <string name="viewlistofassignedleads">Leads Management</string>
    <string name="viewlistofproduct">View List of Product</string>
    <string name="leavemanagemnent">Leave\n Management</string>
    <string name="updateprofile">User Profile</string>
    <string name="join_us">Join us</string>
    <string name="category">Category</string>

    <string name="category_name">Category Name</string>
    <string name="product_name">Product</string>
    <string name="expiry_date">Expiry Date</string>
    <string name="product_amount">Product Amount</string>
    <string name="user_name">User Name</string>
    <string name="service_start_time">Service Start Data/Time</string>
    <string name="service_duration">Service Duration</string>
    <string name="service_type">Service Type</string>
    <string name="address">Address</string>
    <string name="subject">Subject</string>
    <string name="to_date">To Date</string>
    <string name="from_date">From Date</string>
    <string name="reason">Reason</string>
    <string name="action">Action</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="viewleads">ViewLeads</string>
    <string name="hello_user">Hello User</string>
    <string name="refer_your_friends_and_n_get_some_offer">My Salonss Wake Up &amp; Makeup
    </string>
    <string name="continue_to_n_mysaloon">Continue to \n My Salonss</string>
    <string name="_60_complete">60% Complete</string>
    <string name="instruction">Instruction</string>
    <string name="notification">Notification</string>
    <string name="profile">Profile</string>
    <string name="home">Home</string>
    <string name="helpline">Helpline</string>
    <string name="logout">Logout</string>
    <string name="contactno">HelpLine Number</string>
    <string name="number">112</string>
    <string name="number1">1090</string>
    <string name="emails">helpmy@salonss.com</string>
    <string name="request_product">Request Product</string>
    <string name="add_leave">Add Leave</string>
    <string name="password">Password</string>
    <string name="applyleave">Apply Leave</string>
    <string name="Subject">Subject</string>
    <string name="quanity">Quantity</string>
    <string name="price">Price</string>
    <string name="request">Request</string>
    <string name="my_saloon">My Salonss</string>
    <string name="lastname">lastname</string>
    <string name="status">Status</string>
    <string name="change_password">Change Password</string>
    <string name="selling_quantity">Selling Quantity</string>
    <string name="available_quantity">Requested Quantity</string>
    <string name="total_price">Total Price</string>
    <string name="product_allocation">Product \nRequest</string>
    <string name="total_available_quantiy">Total Avaliable Quantity</string>
    <string name="allocated_product">Allocated \nProduct</string>
    <string name="allocated_quanity">Allocated Quantity</string>
    <string name="view_map">View Map</string>
    <string name="title_activity_maps">MapsActivity</string>
    <!--<string name="google_api_key">AIzaSyCOejrdA6Od52MC7gbIKCGTeFJeYc6fOY4</string>-->
</resources>
